[gd_scene load_steps=33 format=3 uid="uid://b5gigobueilix"]

[ext_resource type="Script" uid="uid://ckjt1t4tl5soy" path="res://Scripts/main_menu.gd" id="1_oinqm"]
[ext_resource type="FontFile" uid="uid://behuf74h25j5t" path="res://GameAssets/DynaPuff/DynaPuff-VariableFont_wdth,wght.ttf" id="1_ugjs1"]
[ext_resource type="Texture2D" uid="uid://8pntxcrwopv7" path="res://Assets/Art/BG_Space.jpg" id="3_8bard"]
[ext_resource type="Texture2D" uid="uid://yv20cwmhlpwh" path="res://Assets/Art/MenuBubble.png" id="5_84j0t"]
[ext_resource type="Texture2D" uid="uid://58hkgo1s8li0" path="res://Assets/Art/Title_Sheet.png" id="5_styjg"]
[ext_resource type="Texture2D" uid="uid://gbmwr3ji3ra3" path="res://Assets/Art/BubblesSheet.png" id="5_xd7ie"]
[ext_resource type="Theme" uid="uid://cfuny4aqpg8r2" path="res://Resources/default_theme.tres" id="6_actju"]
[ext_resource type="Script" uid="uid://btxyy03cgiojw" path="res://Scripts/valikko_apina.gd" id="6_cx4xl"]
[ext_resource type="Texture2D" uid="uid://cuxs0jdep2tjs" path="res://Assets/Art/BubbleBGTexture.png" id="7_pyfg4"]
[ext_resource type="Texture2D" uid="uid://c4mgs6y8y43he" path="res://Assets/Art/ActualBubble_Sheet.png" id="8_yoddx"]
[ext_resource type="AudioStream" uid="uid://blwan44chay8p" path="res://Assets/Audio/SFX/bubble-pop.mp3" id="12_s5yk8"]

[sub_resource type="Theme" id="Theme_avieb"]
Button/fonts/font = ExtResource("1_ugjs1")
Label/fonts/font = ExtResource("1_ugjs1")

[sub_resource type="AtlasTexture" id="AtlasTexture_72cta"]
atlas = ExtResource("3_8bard")
region = Rect2(0, 0, 1920, 1080)

[sub_resource type="AtlasTexture" id="AtlasTexture_8p14s"]
atlas = ExtResource("3_8bard")
region = Rect2(1920, 0, 1920, 1080)

[sub_resource type="AtlasTexture" id="AtlasTexture_ejipe"]
atlas = ExtResource("3_8bard")
region = Rect2(0, 1080, 1920, 1080)

[sub_resource type="AtlasTexture" id="AtlasTexture_e4y81"]
atlas = ExtResource("3_8bard")
region = Rect2(1920, 1080, 1920, 1080)

[sub_resource type="SpriteFrames" id="SpriteFrames_chcqr"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_72cta")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8p14s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ejipe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e4y81")
}],
"loop": true,
"name": &"default",
"speed": 4.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_t8ox7"]
atlas = ExtResource("5_styjg")
region = Rect2(0, 0, 630, 500)

[sub_resource type="AtlasTexture" id="AtlasTexture_s2scx"]
atlas = ExtResource("5_styjg")
region = Rect2(630, 0, 630, 500)

[sub_resource type="SpriteFrames" id="SpriteFrames_bq2v4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_t8ox7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s2scx")
}],
"loop": true,
"name": &"default",
"speed": 2.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_68v2j"]
atlas = ExtResource("5_xd7ie")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_pyr0n"]
atlas = ExtResource("5_xd7ie")
region = Rect2(0, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_64lv3"]
atlas = ExtResource("5_xd7ie")
region = Rect2(0, 256, 128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_g6qib"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_68v2j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pyr0n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_64lv3")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_58nmk"]
atlas = ExtResource("8_yoddx")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ctnhm"]
atlas = ExtResource("8_yoddx")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_f5850"]
atlas = ExtResource("8_yoddx")
region = Rect2(256, 0, 128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_ea5kg"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_58nmk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ctnhm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f5850")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="Theme" id="Theme_gnr1q"]

[sub_resource type="AtlasTexture" id="AtlasTexture_u7ehx"]
atlas = ExtResource("5_styjg")
region = Rect2(0, 0, 630, 500)

[sub_resource type="AtlasTexture" id="AtlasTexture_qba2m"]
atlas = ExtResource("5_styjg")
region = Rect2(630, 0, 630, 500)

[sub_resource type="SpriteFrames" id="SpriteFrames_a3r2e"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_u7ehx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qba2m")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_avieb")
script = ExtResource("1_oinqm")

[node name="bg" type="AnimatedSprite2D" parent="."]
visible = false
z_index = -10
position = Vector2(960, 540)
sprite_frames = SubResource("SpriteFrames_chcqr")
autoplay = "default"
frame = 2
frame_progress = 0.481552
metadata/_edit_lock_ = true

[node name="GameTitle" type="AnimatedSprite2D" parent="."]
position = Vector2(508, 358)
scale = Vector2(1.425, 1.425)
sprite_frames = SubResource("SpriteFrames_bq2v4")
autoplay = "default"
metadata/_edit_lock_ = true

[node name="BubblesMainMenu" type="Node2D" parent="."]
position = Vector2(1476, 477)
metadata/_edit_group_ = true

[node name="ApinaBubbles" type="AnimatedSprite2D" parent="BubblesMainMenu"]
position = Vector2(0, -8)
scale = Vector2(2.265, 2.265)
sprite_frames = SubResource("SpriteFrames_g6qib")
autoplay = "default"
script = ExtResource("6_cx4xl")
metadata/_edit_group_ = true

[node name="Bubble" type="Sprite2D" parent="BubblesMainMenu"]
scale = Vector2(2.89, 2.89)
texture = ExtResource("7_pyfg4")
metadata/_edit_group_ = true

[node name="BubbleOutline" type="AnimatedSprite2D" parent="BubblesMainMenu"]
z_index = 1
position = Vector2(0.160034, -5.84)
scale = Vector2(2.94, 2.94)
sprite_frames = SubResource("SpriteFrames_ea5kg")
autoplay = "default"
metadata/_edit_group_ = true

[node name="pop" type="AudioStreamPlayer" parent="."]
stream = ExtResource("12_s5yk8")
volume_db = -10.0
bus = &"SFX"

[node name="VBoxContainer4" type="CenterContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 91.3648
offset_top = 131.132
offset_right = 341.365
offset_bottom = 231.132
grow_vertical = 2
rotation = 0.279253

[node name="Options" type="Button" parent="VBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 8
theme = SubResource("Theme_gnr1q")
theme_override_font_sizes/font_size = 40
action_mode = 0
text = "Settings"
icon_alignment = 1
expand_icon = true

[node name="VBoxContainer5" type="CenterContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 171.365
offset_top = 276.132
offset_right = 421.365
offset_bottom = 376.132
grow_vertical = 2
rotation = -0.0349066

[node name="Quit" type="Button" parent="VBoxContainer5"]
layout_mode = 2
size_flags_horizontal = 4
theme = SubResource("Theme_gnr1q")
theme_override_font_sizes/font_size = 40
action_mode = 0
text = "Quit"
icon_alignment = 1
expand_icon = true

[node name="HBoxContainer" type="HBoxContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Control" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.2

[node name="Title_control" type="Control" parent="HBoxContainer/Control"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 1.3

[node name="title" type="AnimatedSprite2D" parent="HBoxContainer/Control/Title_control"]
position = Vector2(277, 250)
scale = Vector2(0.785, 0.785)
sprite_frames = SubResource("SpriteFrames_a3r2e")
autoplay = "default"

[node name="Control6" type="Control" parent="HBoxContainer/Control"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Control7" type="Control" parent="HBoxContainer/Control"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Control2" type="Control" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Control3" type="Control" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Control4" type="Control" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Start_button" type="Control" parent="."]
layout_mode = 1
anchor_left = 0.376
anchor_top = 0.494
anchor_right = 0.532
anchor_bottom = 0.723
offset_left = -0.400024
offset_top = 49.0001
offset_right = 4.20001
offset_bottom = 13.0
rotation = -0.10472
metadata/_edit_group_ = true

[node name="texture_button" type="TextureButton" parent="Start_button"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.458
anchor_bottom = 0.458
offset_left = -1045.39
offset_top = -780.458
offset_right = 1354.61
offset_bottom = 719.542
rotation = -0.10472
scale = Vector2(0.285, 0.155)
pivot_offset = Vector2(1200, 750)
size_flags_horizontal = 8
theme = SubResource("Theme_gnr1q")
action_mode = 0
texture_normal = ExtResource("5_84j0t")

[node name="Label" type="Label" parent="Start_button"]
layout_mode = 0
offset_left = -22.4469
offset_top = 50.9326
offset_right = 206.553
offset_bottom = 113.933
rotation = -0.10472
scale = Vector2(1.815, 1.815)
theme = ExtResource("6_actju")
text = "Start game!"

[node name="how_to_play_button" type="Control" parent="."]
layout_mode = 1
anchor_left = 0.429
anchor_top = 0.787
anchor_right = 0.544
anchor_bottom = 0.921
offset_left = 0.899902
offset_top = -6.0
offset_right = 83.3999
offset_bottom = 52.9999
rotation = 0.0296706
scale = Vector2(0.725, 0.725)
metadata/_edit_group_ = true

[node name="texture_button" type="TextureButton" parent="how_to_play_button"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.458
anchor_bottom = 0.458
offset_left = -1045.39
offset_top = -780.458
offset_right = 1354.61
offset_bottom = 719.542
rotation = -0.10472
scale = Vector2(0.285, 0.155)
pivot_offset = Vector2(1200, 750)
size_flags_horizontal = 8
theme = SubResource("Theme_gnr1q")
action_mode = 0
texture_normal = ExtResource("5_84j0t")

[node name="Label" type="Label" parent="how_to_play_button"]
layout_mode = 0
offset_left = -22.4469
offset_top = 50.9326
offset_right = 206.553
offset_bottom = 113.933
rotation = -0.10472
scale = Vector2(1.815, 1.815)
theme = ExtResource("6_actju")
text = "How to play"

[node name="about_us_button" type="Control" parent="."]
layout_mode = 1
anchor_left = 0.099
anchor_top = 0.877
anchor_right = 0.203
anchor_bottom = 0.97
offset_left = -0.100006
offset_top = -34.0201
offset_right = 103.3
offset_bottom = 65.9799
rotation = 0.0296706
scale = Vector2(0.66, 0.66)
metadata/_edit_group_ = true

[node name="texture_button" type="TextureButton" parent="about_us_button"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.458
anchor_bottom = 0.458
offset_left = -1045.39
offset_top = -780.458
offset_right = 1354.61
offset_bottom = 719.542
rotation = -0.10472
scale = Vector2(0.285, 0.155)
pivot_offset = Vector2(1200, 750)
size_flags_horizontal = 8
theme = SubResource("Theme_gnr1q")
action_mode = 0
texture_normal = ExtResource("5_84j0t")

[node name="Label" type="Label" parent="about_us_button"]
layout_mode = 0
offset_left = 3.74847
offset_top = 50.1552
offset_right = 232.748
offset_bottom = 113.156
rotation = -0.10472
scale = Vector2(2, 2)
theme = ExtResource("6_actju")
text = "About us"

[node name="options_button" type="Control" parent="."]
layout_mode = 1
anchor_left = 0.098
anchor_top = 0.681
anchor_right = 0.198
anchor_bottom = 0.802
offset_left = -0.199951
offset_top = -59.0001
offset_right = 110.8
offset_bottom = 12.9998
rotation = 0.300197
scale = Vector2(0.66, 0.66)
metadata/_edit_group_ = true

[node name="texture_button" type="TextureButton" parent="options_button"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.458
anchor_bottom = 0.458
offset_left = -1045.39
offset_top = -780.458
offset_right = 1354.61
offset_bottom = 719.542
rotation = -0.10472
scale = Vector2(0.285, 0.155)
pivot_offset = Vector2(1200, 750)
size_flags_horizontal = 8
theme = SubResource("Theme_gnr1q")
action_mode = 0
texture_normal = ExtResource("5_84j0t")

[node name="Label" type="Label" parent="options_button"]
layout_mode = 0
offset_left = 3.74847
offset_top = 50.1552
offset_right = 232.748
offset_bottom = 113.156
rotation = -0.10472
scale = Vector2(1.815, 1.815)
theme = ExtResource("6_actju")
text = "Settings"

[node name="quit_button" type="Control" parent="."]
layout_mode = 1
anchor_left = 0.782
anchor_top = 0.832
anchor_right = 0.884
anchor_bottom = 0.901
offset_left = -3.80017
offset_top = -37.335
offset_right = 103.4
offset_bottom = 86.6649
rotation = -0.10472
scale = Vector2(0.66, 0.66)
metadata/_edit_group_ = true

[node name="texture_button" type="TextureButton" parent="quit_button"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.458
anchor_bottom = 0.458
offset_left = -1045.39
offset_top = -780.458
offset_right = 1354.61
offset_bottom = 719.542
rotation = -0.10472
scale = Vector2(0.285, 0.155)
pivot_offset = Vector2(1200, 750)
size_flags_horizontal = 8
theme = SubResource("Theme_gnr1q")
action_mode = 0
texture_normal = ExtResource("5_84j0t")

[node name="Label" type="Label" parent="quit_button"]
layout_mode = 0
offset_left = 65.5413
offset_top = 44.2803
offset_right = 206.541
offset_bottom = 107.28
rotation = -0.10472
scale = Vector2(1.815, 1.815)
theme = ExtResource("6_actju")
text = "Quit"

[connection signal="finished" from="pop" to="." method="_on_pop_finished"]
[connection signal="pressed" from="VBoxContainer4/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="VBoxContainer5/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="Start_button/texture_button" to="." method="_on_start_game_pressed"]
[connection signal="pressed" from="how_to_play_button/texture_button" to="." method="_on_how_to_play_pressed"]
[connection signal="pressed" from="about_us_button/texture_button" to="." method="_on_about_us_pressed"]
[connection signal="pressed" from="options_button/texture_button" to="." method="_on_options_pressed"]
[connection signal="pressed" from="quit_button/texture_button" to="." method="_on_quit_pressed"]
